<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mi_shedule_refresh"
        android:title="@string/refresh" />

    <item
        android:id="@+id/mi_shedule_edit"
        android:title="@string/edit" />

    <item android:title="@string/addFilter">

        <menu>
            <item
                android:id="@+id/mi_shedule_removeFilter"
                android:title="@string/removeFilter" />
            <item
                android:id="@+id/mi_shedule_course"
                android:title="@string/course" />
            <item
                android:id="@+id/mi_shedule_prof"
                android:title="@string/prof" />
            <item
                android:id="@+id/mi_shedule_startTime"
                android:title="@string/startTime" />
            <item
                android:id="@+id/mi_shedule_endTime"
                android:title="@string/endTime" />
            <item
                android:id="@+id/mi_shedule_room"
                android:title="@string/room" />
            <item
                android:id="@+id/mi_shedule_type"
                android:title="@string/type" />
        </menu>

    </item>



</menu>