<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground"
    tools:context=".activities.Activity_addTask">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/newTask"
        android:textColor="@color/pageTitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_addnewtask_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/buttonBackground"
        android:text="@string/save"
        android:textColor="@color/normalText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_addnewtask_options"
        android:layout_width="43dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:foreground="@drawable/icon_options"
        android:foregroundTint="@color/normalText"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_addnewtask_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/normalText"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_addnewtask_titel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/normalText"
                android:hint="@string/needed"
                android:textAlignment="center"
                android:textColor="@color/normalText"
                android:textColorHint="@color/buttonBackground" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desription"
                android:textAlignment="center"
                android:textColor="@color/normalText"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_addnewtask_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/normalText"
                android:hint="@string/opt"
                android:textAlignment="center"
                android:textColor="@color/normalText"
                android:textColorHint="@color/buttonBackground" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_addnewtask_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course"
                android:textAlignment="center"
                android:textColor="@color/normalText"
                android:textSize="24sp"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/sp_addnewtask_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_addnewtask_deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deadline"
                android:textAlignment="center"
                android:textColor="@color/normalText"
                android:textSize="24sp"
                android:visibility="gone" />

            <DatePicker
                android:id="@+id/dp_addnewtask_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="calendar"
                android:dateTextAppearance="@style/CalenderViewDateCustomText"
                android:headerBackground="@color/pageTitle"
                android:theme="@style/CalenderViewCustom"
                android:visibility="gone"
                android:weekDayTextAppearance="@style/CalenderViewWeekCustomText" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>