<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:src="@drawable/img_fh_hof_logo_dots"
                android:contentDescription="@string/app_name" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:contentDescription="@string/app_name"
                android:tint="@color/normalText"
                android:src="@drawable/img_fh_hof_logo_text" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/select_degree"
            android:textAlignment="center"
            android:textColor="@color/normalText"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <Spinner
                android:id="@+id/sp_setupassistant_degree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/normalText"
                android:spinnerMode="dialog" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:text="@string/select_semester"
            android:textAlignment="center"
            android:textColor="@color/normalText"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <Spinner
                android:id="@+id/sp_setupassistant_semester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/normalText"
                android:spinnerMode="dialog" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:text="@string/select_username"
            android:textAlignment="center"
            android:textColor="@color/normalText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_setupassistant_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingBottom="20dp"
            android:textAlignment="center"
            android:textColor="@color/normalText"
            android:textColorHint="@color/hintText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_setupassistant_save"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/save" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>