<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/pageTitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/tv_about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/normalText"
            android:textSize="18sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:onClick="openSemify"
            android:text="@string/semify"
            android:textColor="@color/normalText"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="135dp"
            android:layout_height="54dp"
            android:layout_weight="0"
            android:contentDescription="@string/app_name"
            android:onClick="openSemify"
            android:src="@drawable/img_semify_logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>